updated env file db information

--- a/.env
+++ b/.env
@@ -22,9 +22,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=carbid
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u787830286_carbid
+DB_USERNAME=u787830286_carbid
+DB_PASSWORD="Carbid#123"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
