--- a/.htaccess
+++ b/.htaccess
@@ -18,4 +18,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    php_flag display_errors on
+    php_value error_reporting -1
 </IfModule>
