--- a/.htaccess
+++ b/.htaccess
@@ -20,4 +20,5 @@
     RewriteRule ^ index.php [L]
     php_flag display_errors on
     php_value error_reporting -1
+    php_value error_log /home/u787830286/public_html/php_error.log
 </IfModule>
