--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ vendor/composer/autoload_classmap.php
 vendor/composer/autoload_static.php
 vendor/composer/installed.json
 vendor/composer/installed.php
+ucars.csv
+ucars.py
+ucars.csv
